--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="google-comment">
         <div class="google-comment__logo">
           <img
-            src="../dccl--responsive-testimonial-page/google-testimonial.png"
+            src="./google-testimonial.png"
             height="24"
             alt="google-logo"
           />
@@ -181,7 +181,7 @@
       <div class="meta-comment">
         <div class="meta-comment__logo">
           <img
-            src="../dccl--responsive-testimonial-page/meta-testimonial.png"
+            src="./meta-testimonial.png"
             height="24"
             alt="meta-logo"
           />
